edit and update routes complete

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.3",
+    "parser": "^0.1.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
